--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 
     <p>A new line in our file!</p>
 
+    <hr>
+    <p>This is the first file in my new Git Repo.</p>
+    <p>This line is here to show how merging works.</p>
 
 </body>
 
