--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     </form>
 
     <p>A new line in our file!</p>
+    <p>This line is here to show how merging works.</p>
+    <div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
     <hr>
     <p>This is the first file in my new Git Repo.</p>
